V2 avec animations et smooth scrolling

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ puis
     <!--Import Google Icon Font-->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <!--Import materialize.css-->
-    <link type="text/css" rel="stylesheet" href="materialize/materialize.min.css" media="screen,projection" />
+    <link type="text/css" rel="stylesheet" href="materialize/materialize.min.css" media="screen" />
     <link rel="stylesheet" type="text/css" href="./ChrNagad.css">
     <!--Let browser know website is optimized for mobile-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -26,14 +26,14 @@ puis
 
 <body>
     <!-- - - - - - - - - - 1e page - - - - - - - - -->
-    <section id="hautPage1" title="visage">
-        <div class="coord">
+    <section id="hautPage1" title="organisée, consciencieuse, sens du service">
+        <div class="visage">
         </div>
         <div class="titre">
             <h2>CHRISTINE NAGAD</h2>
             <h1>Développeuse <br>WEB front-end</h1>
             <p id="p1">Mobile : +06 62 68 49 25<br>E-mail: nagadchr@yahoo.com</p>
-            <div id="bouton1Div">
+            <div>
                 <button id="bouton1Bas" onclick="scroll1Bas()">Suite</button>
             </div>
         </div>
