--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@ puis
     <section id="blocDe8">
         <div class="blocDe2">
             <button class="enTete">Animations</button>
-            <a href="ProjetPlage/animation.html"><button class="site"><img src="./sources/plage.png" /></button></a>
+            <a href="ProjetPlage/animation.html"><button class="site"><img src="./sources/Plage.png" /></button></a>
         </div>
         <div class="blocDe2">
             <button class="enTete">Accessibilité</button>
@@ -69,7 +69,7 @@ puis
         </div>
         <div class="blocDe2">
             <button class="enTete">Materialize</button>
-            <a href="ProjetLicorne/licorne.html"><button class=site><img src="./sources/licorne.png" /></button></a>
+            <a href="ProjetLicorne/licorne.html"><button class=site><img src="./sources/Licorne.png" /></button></a>
         </div>
     </section>
     <button id="bouton2Bas" onclick="scroll2Bas()">Suite</button>
@@ -152,8 +152,7 @@ puis
             </li>
             <li>
                 <div class="collapsible-header">
-                    <img src="./sources/Elf.jpg" alt="ELF"></img>
-
+                    <img src="./sources/ELF.jpg" alt="ELF"></img>
                     <img src="./sources/SOLLAC.jpg" alt="Sollac"></img>
                     <img src="./sources/alstom.gif" alt="Alstom"></img>
                     <img src="./sources/intertechnique.jpg" alt="Intertechnique"></img>
