--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@ puis
         <img id="angular" src="./sources/angular.png" alt="angular">
         <img id="materialize" src="./sources/materialize.png" alt="Materialize">
         <img id="react" src="./sources/react.png" alt="react">
-        <img id="gsap" src="./sources/GSAP.svg" alt="GSAP">
+        <img id="gsap" src="./sources/gsap.svg" alt="GSAP">
         <img id="agile" src="./sources/agile.png" alt="Agile Scrum">
         <p id="formation">Formation Coding Academy by Epitech</p>
         <p id="certif">Certification OPQUAST en cours</p>
