V3 changer boutons des applications

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@ puis
     <meta name="keywords" content="Christine, Nagad, portfolio, WEB, développeur, front-end">
     <title>CHRISTINE NAGAD</title>
 
+    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
     <!--Import Google Icon Font-->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <!--Import materialize.css-->
@@ -56,20 +57,20 @@ puis
     </section>
     <section id="blocDe8">
         <div class="blocDe2">
-            <button class="enTete">Animations</button>
-            <a href="ProjetPlage/animation.html"><button class="site"><img src="./sources/Plage.png" /></button></a>
+            <a href="ProjetPlage/animation.html"> <img class="site" src="./sources/Plage.png" alt="Plage avec transat"/></a>
+            <p class="sousTitre">Animations</p>
         </div>
         <div class="blocDe2">
-            <button class="enTete">Accessibilité</button>
-            <a href="ProjetZen/index.html"><button class="site"><img src="./sources/zen.png" /></button></a>
+            <a href="ProjetZen/index.html"><img class="site" src="./sources/zen.png" alt="Jardin japonnais"/></a>
+            <p class="sousTitre">Accessibilité</p>
         </div>
         <div class="blocDe2">
-            <button class="enTete">GSAP</button>
-            <a href="ProjetEmoji/gsap.html"><button class="site"><img src="./sources/Emoji-factory.png" /></button></a>
+            <a href="ProjetEmoji/gsap.html"><img class="site" src="./sources/Emoji-factory.png" alt="Usine d'emoji"/></a>
+            <p class="sousTitre">GSAP</p>
         </div>
         <div class="blocDe2">
-            <button class="enTete">Materialize</button>
-            <a href="ProjetLicorne/licorne.html"><button class=site><img src="./sources/Licorne.png" /></button></a>
+            <a href="ProjetLicorne/licorne.html"><img class="site" src="./sources/Licorne.png" alt="Licorne"/></a>
+            <p class="sousTitre">Materialize</p>
         </div>
     </section>
     <button id="bouton2Bas" onclick="scroll2Bas()">Suite</button>
@@ -78,23 +79,23 @@ puis
     <!-- - - - - - - - - - 3e page - - - - - - - - -->
     <section id="hautPage3">
         <div id="autresMetiers">
-            <span id="metier1">
+            <div id="metier1">
                 <h3 class="h3_1">Assistante à maîtrise d'ouvrage</h3>
                 <p class="p3">Ingénieur-Mastère en informatique</p>
-            </span>
-            <span id="metier2">
+            </div>
+            <div id="metier2">
                 <h3 class="h3_1">I.T. service manager</h3>
                 <p class="p3">Certifiée ITIL, ISO 20.000</p>
-            </span>
+            </div>
 
         </div>
         <ul class="collapsible">
             <li>
                 <div class="collapsible-header">
-                    <img src="./sources/carrefour.png" alt="Carrefour"></img>
-                    <img src="./sources/orange.png" alt="Orange"></img>
-                    <img src="./sources/RATP.png" alt="RATP"></img>
-                    <img src="./sources/dga.jpg" alt="DGA"></img>
+                    <img src="./sources/carrefour.png" alt="Carrefour">
+                    <img src="./sources/orange.png" alt="Orange">
+                    <img src="./sources/RATP.png" alt="RATP">
+                    <img src="./sources/dga.jpg" alt="DGA">
                 </div>
                 <div class="collapsible-body">
                     <p>
@@ -113,10 +114,10 @@ puis
             </li>
             <li>
                 <div class="collapsible-header">
-                    <img src="./sources/CCI.png" alt="CCI de Lille"></img>
-                    <img src="./sources/Areva.png" alt="AREVA"></img>
-                    <img src="./sources/Renault.jpg" alt="Renault"></img>
-                    <img src="./sources/gtie.jpg" alt="GTIE"></img>
+                    <img src="./sources/CCI.png" alt="CCI de Lille">
+                    <img src="./sources/Areva.png" alt="AREVA">
+                    <img src="./sources/Renault.jpg" alt="Renault">
+                    <img src="./sources/gtie.jpg" alt="GTIE">
                 </div>
                 <div class="collapsible-body">
                     <p>
@@ -132,10 +133,10 @@ puis
             </li>
             <li>
                 <div class="collapsible-header">
-                    <img src="./sources/matra.jpg" alt="Matra"></img>
-                    <img src="./sources/EADS.jpg" alt="EADS"></img>
-                    <img src="./sources/Thales.png" alt="Thales"></img>
-                    <img src="./sources/SNCF.png" alt="SNCF"></img>
+                    <img src="./sources/matra.jpg" alt="Matra">
+                    <img src="./sources/EADS.jpg" alt="EADS">
+                    <img src="./sources/Thales.png" alt="Thales">
+                    <img src="./sources/SNCF.png" alt="SNCF">
                 </div>
                 <div class="collapsible-body">
                     <p>
@@ -152,10 +153,10 @@ puis
             </li>
             <li>
                 <div class="collapsible-header">
-                    <img src="./sources/ELF.jpg" alt="ELF"></img>
-                    <img src="./sources/SOLLAC.jpg" alt="Sollac"></img>
-                    <img src="./sources/alstom.gif" alt="Alstom"></img>
-                    <img src="./sources/intertechnique.jpg" alt="Intertechnique"></img>
+                    <img src="./sources/ELF.jpg" alt="ELF">
+                    <img src="./sources/SOLLAC.jpg" alt="Sollac">
+                    <img src="./sources/alstom.gif" alt="Alstom">
+                    <img src="./sources/intertechnique.jpg" alt="Intertechnique">
                 </div>
                 <div class="collapsible-body">
                     <p>
