--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@ puis
         </div>
         <div class="blocDe2">
             <a href="ProjetEmoji/gsap.html"><img class="site" src="./sources/Emoji-factory.png" alt="Usine d'emoji"/></a>
-            <p class="sousTitre">GSAP</p>
+            <p id="toto" class="sousTitre">GSAP</p>
         </div>
         <div class="blocDe2">
             <a href="ProjetLicorne/licorne.html"><img class="site" src="./sources/Licorne.png" alt="Licorne"/></a>
