fix img zen project

--- a/ProjetZen/index.html
+++ b/ProjetZen/index.html
@@ -28,7 +28,7 @@ puis
     </section>
     <section class="centre">
         <header>
-            <div id="aGauche"> <img src="resources/logo.png" alt="logo"> </div>
+            <div id="aGauche"> <img src="./resources/logo.png" alt="logo"> </div>
             <div id=aDroite>
                 <button type="button" class="btnBottom" onclick="alert('Home')">Home</button>
                 <button type="button" class="btnBottom" onclick="alert('About')">About</button>
