2e fix img zen project3

--- a/ProjetZen/index.html
+++ b/ProjetZen/index.html
@@ -72,9 +72,9 @@ dolore eu fugiat nulla pariatur</pre>
             </section>
         </section>
         <section id="photos2">
-            <img src="resources/gallery_01.jpg" alt="Fleurs dans clairière" class="photo">
-            <img src="resources/gallery_02.jpg" alt="Mousse en sous-bois" class="photo">
-            <img src="resources/gallery_03.jpg" alt="Soleil dans les feuilles" class="photo">
+            <img src="./Resources/gallery_01.jpg" alt="Fleurs dans clairière" class="photo">
+            <img src="./Resources/gallery_02.jpg" alt="Mousse en sous-bois" class="photo">
+            <img src="./Resources/gallery_03.jpg" alt="Soleil dans les feuilles" class="photo">
         </section>
         <section id="news">
             <section class="texteMultiple">
@@ -112,9 +112,9 @@ fugiat nulla pariatur.</pre>
             </section>
         </section>
         <section id="photos3">
-            <img src="resources/gallery_04.jpg" alt="Au pied de mon arbre" class="photo">
-            <img src="resources/gallery_05.jpg" alt="Chemin de fer forestier" class="photo">
-            <img src="resources/gallery_06.jpg" alt="Dans la futaie" class="photo">
+            <img src="./Resources/gallery_04.jpg" alt="Au pied de mon arbre" class="photo">
+            <img src="./Resources/gallery_05.jpg" alt="Chemin de fer forestier" class="photo">
+            <img src="./Resources/gallery_06.jpg" alt="Dans la futaie" class="photo">
         </section>
         <section id="skills">
             <section class="texteMultiple">
@@ -171,9 +171,9 @@ sed do eiusmod tempor incididunt ut labore et dolore magna aliqua </pre>
             </section>
         </section>
         <section id="photos4">
-            <img src="resources/gallery_07.jpg" alt="Ruisseau" class="photo">
-            <img src="resources/gallery_08.jpg" alt="Sous la futaie" class="photo">
-            <img src="resources/gallery_09.jpg" alt="Buissons" class="photo">
+            <img src="./Resources/gallery_07.jpg" alt="Ruisseau" class="photo">
+            <img src="./Resources/gallery_08.jpg" alt="Sous la futaie" class="photo">
+            <img src="./Resources/gallery_09.jpg" alt="Buissons" class="photo">
         </section>
         <section id="pinterest">
             <div class="texteEntete">
