entete du formulaire V2

--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@ puis
         </section>
         <section id="partieDroite">
             <div>
-                <h2 id="parlons">Partageons nos idées !</h2>
+                <h2 id="parlons">Contactez-moi et échangeons sur vos projets</h2>
                 <form id="formulaire" action="https://formspree.io/nagadchr@yahoo.com" method="POST">
                     Vos nom(s) et prénom(s): <input type="text" name="nom" class="saisie"><br>
                     Votre société : <input type="text" name="societe" class="saisie"><br>
