--- a/index.html
+++ b/index.html
@@ -112,10 +112,10 @@ puis
         <ul class="collapsible">
             <li>
                 <div class="collapsible-header">
-                    <img src="./sources/carrefour.png" alt="Carrefour">
-                    <img src="./sources/orange.png" alt="Orange">
-                    <img src="./sources/RATP.png" alt="RATP">
-                    <img src="./sources/dga.jpg" alt="DGA">
+                    <img src="./sources/carrefour.png" alt="Carrefour" title="cliquez !">
+                    <img src="./sources/orange.png" alt="Orange" title="cliquez !">
+                    <img src="./sources/RATP.png" alt="RATP" title="cliquez !">
+                    <img src="./sources/dga.jpg" alt="DGA" title="cliquez !">
                 </div>
                 <div class="collapsible-body">
                     <p>
@@ -131,10 +131,10 @@ puis
             </li>
             <li>
                 <div class="collapsible-header">
-                    <img src="./sources/CCI.png" alt="CCI de Lille">
-                    <img src="./sources/Areva.png" alt="AREVA">
-                    <img src="./sources/Renault.jpg" alt="Renault">
-                    <img src="./sources/gtie.jpg" alt="GTIE">
+                    <img src="./sources/CCI.png" alt="CCI de Lille" title="cliquez !">
+                    <img src="./sources/Areva.png" alt="AREVA" title="cliquez !">
+                    <img src="./sources/Renault.jpg" alt="Renault" title="cliquez !">
+                    <img src="./sources/gtie.jpg" alt="GTIE" title="cliquez !">
                 </div>
                 <div class="collapsible-body">
                     <p>
@@ -150,10 +150,10 @@ puis
             </li>
             <li>
                 <div class="collapsible-header">
-                    <img src="./sources/matra.jpg" alt="Matra">
-                    <img src="./sources/EADS.jpg" alt="EADS">
-                    <img src="./sources/Thales.png" alt="Thales">
-                    <img src="./sources/SNCF.png" alt="SNCF">
+                    <img src="./sources/matra.jpg" alt="Matra" title="cliquez !">
+                    <img src="./sources/EADS.jpg" alt="EADS" title="cliquez !">
+                    <img src="./sources/Thales.png" alt="Thales" title="cliquez !">
+                    <img src="./sources/SNCF.png" alt="SNCF" title="cliquez !">
                 </div>
                 <div class="collapsible-body">
                     <p>
@@ -169,10 +169,10 @@ puis
             </li>
             <li>
                 <div class="collapsible-header">
-                    <img src="./sources/ELF.jpg" alt="ELF">
-                    <img src="./sources/SOLLAC.jpg" alt="Sollac">
-                    <img src="./sources/alstom.gif" alt="Alstom">
-                    <img src="./sources/intertechnique.jpg" alt="Intertechnique">
+                    <img src="./sources/ELF.jpg" alt="ELF" title="cliquez !">
+                    <img src="./sources/SOLLAC.jpg" alt="Sollac" title="cliquez !">
+                    <img src="./sources/alstom.gif" alt="Alstom" title="cliquez !">
+                    <img src="./sources/intertechnique.jpg" alt="Intertechnique" title="cliquez !">
                 </div>
                 <div class="collapsible-body">
                     <p>
