--- a/index.html
+++ b/index.html
@@ -159,10 +159,10 @@ puis
                     <p>
                         <strong class="bleu">MATRA COMMUNICATION</strong> : ingénieur qualité sur un projet de
                         téléphonie. <br>
-                        <strong class="bleu">EADS (AEROSPATIALE)</strong> : ingénieur qualité et test en recherche
-                        mathématique (Confidentiel Défense)<br>
-                        <strong class="bleu">THALES</strong> : ingénieur qualité pour un logiciel embarqué (Confidentiel
-                        Défense).<br>
+                        <strong class="bleu">EADS (AEROSPATIALE)</strong> : ingénieur qualité pour un logiciel
+                        embarqué (Confidentiel Défense)<br>
+                        <strong class="bleu">THALES</strong> : ingénieur qualité et test en recherche
+                        mathématique (Confidentiel Défense).<br>
                         <strong class="bleu">SNCF</strong> : auditeur puis ingénieur qualité de 4 projets logiciels
                         ferroviaires.</p>
                 </div>
