--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@ puis
             <li>
                 <div class="collapsible-header">
                     <img src="./sources/ELF.jpg" alt="ELF" title="cliquez !">
-                    <img src="./sources/SOLLAC.jpg" alt="Sollac" title="cliquez !">
+                    <img src="./sources/edf.png" alt="EDF title="cliquez !">
                     <img src="./sources/alstom.gif" alt="Alstom" title="cliquez !">
                     <img src="./sources/intertechnique.jpg" alt="Intertechnique" title="cliquez !">
                 </div>
@@ -178,8 +178,7 @@ puis
                     <p>
                         <strong class="bleu">ELF CONGO (CORAF)</strong> : chef de projet du développement de la
                         supervision d'un site pétrolier.<br>
-                        <strong class="bleu">SOLLAC SAINTE AGATHE</strong> : développeuse de la supervision d'un
-                        haut-fourneau.<br>
+                        <strong class="bleu">EDF</strong> : ingénieur qualité logiciel du projet de Décompte d'Energie.<br>
                         <strong class="bleu">ALSTOM</strong> : ingénieur qualité logiciel d'un projet logiciel en
                         avionique.<br>
                         <strong class="bleu">INTERTECHNIQUE</strong> : ingénieur qualité logiciel d'un projet logiciel
