--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@ puis
             <p class="sousTitre">Animations</p>
         </div>
         <div class="blocDe2">
-            <a href="Angular/dist/dataviz/index.html"><img class="site" src="./sources/angular.png" alt="Jardin japonnais" /></a>
+            <a href="Angular/dist/dataviz/index.html"><img class="site" src="./sources/angularDataviz.png" alt="Jardin japonnais" /></a>
             <p class="sousTitre">Angular</p>
         </div>
         <div class="blocDe2">
